@@ -172,6 +172,8 @@ STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
     )
 STATEMENT_CREATE_TOPIC_VERSION_TOPIC_INDEX = \
     CREATE INDEX jam_i_topicv_topic on jam_topic_version (topic_id) 
+STATEMENT_CREATE_TOPIC_VERSION_PREVIOUS_INDEX = \
+    CREATE INDEX jam_i_topicv_prv on jam_topic_version (previous_topic_version_id) 
 STATEMENT_CREATE_USERS_TABLE = \
     CREATE TABLE jam_users ( \
       username varchar(100) NOT NULL, \
@@ -891,6 +893,9 @@ STATEMENT_SELECT_TOPIC_SEQUENCE = \
 STATEMENT_SELECT_TOPIC_VERSION = \
     select * from jam_topic_version \
     where topic_version_id = ?
+STATEMENT_SELECT_TOPIC_VERSION_NEXT_ID = \
+    select topic_version_id from jam_topic_version \
+    where previous_topic_version_id = ?
 STATEMENT_SELECT_TOPIC_VERSION_SEQUENCE = \
     select max(topic_version_id) as topic_version_id from jam_topic_version
 STATEMENT_SELECT_TOPICS_ADMIN = \
